# fix-user-intent-nlp-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
artifacts/: github_repository_survey.json
code/: README.md
datasets/: .gitignore  README.md  dataset_catalog.json  download_datasets.py
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md
papers/pages/: 2016_term_based_query_reformulation_manifest.txt  2020_deep_search_query_intent_manifest.txt  2020_interactive_question_clarification_rl_manifest.txt  2020_resolving_intent_ambiguities_manifest.txt  2021_multistage_clarification_manifest.txt  2021_spelling_denoising_transformer_manifest.txt  2022_evaluation_metrics_paraphrase_manifest.txt  2022_paraphrasing_entailment_similarity_manifest.txt  2023_query_rewriting_rag_manifest.txt  2023_zeroshot_clarifying_questions_manifest.txt  2024_conformal_intent_classification_manifest.txt  2024_intent_detection_llms_manifest.txt  (+13 more)
results/data/: config.json  (+5 more)
src/: analyze_results.py  config.py  data_loader.py  intent_classifier.py  llm_client.py  metrics.py  run_experiments.py
